--- a/packages/zhiyicx-plus-pc/resources/assets/web/css/feed.css
+++ b/packages/zhiyicx-plus-pc/resources/assets/web/css/feed.css
@@ -29,7 +29,7 @@
 .selected-topics {display: flex;flex-flow: row wrap;margin-top: 10px;}
 .selected-topics .selected-topic-item {background-color: rgba(89, 182, 215, 0.15);padding: 0 6px;border-radius: 3px;color: #59b6d7;font-size: 12px;margin-right: 6px;height: 24px;line-height: 24px;}
 .selected-topics .selected-topic-item .close {height: 24px;line-height: 24px;cursor: pointer;}
-.selected-topics .selected-topic-item svg {transform: rotate(45deg) scale(0.7);}
+.selected-topics .selected-topic-item svg {transform: scale(0.7);}
 
 .uploadify-queue-add {background-image:url(../images/picture-add.png);background-repeat:no-repeat;background-size:cover;}
 .feed_picture_span .imgload {position:absolute;top:18px;left:18px;transform:translateY(-50%) translateX(-50%);-webkit-animation:icon-load 1.5s infinite linear;animation:icon-load 1.5s infinite linear;}
