--- a/packages/zhiyicx-plus-pc/resources/assets/web/css/feed.css
+++ b/packages/zhiyicx-plus-pc/resources/assets/web/css/feed.css
@@ -20,9 +20,9 @@
 .feed_post .dialog-topic-select .hot,
 .feed_post .dialog-mention-select .hot {color: #ccc;margin-top: 20px;cursor: default;}
 .feed_post .dialog-topic-select .topic-list,
-.feed_post .dialog-mention-select .topic-list {display: flex;flex-flow: row wrap;}
+.feed_post .dialog-mention-select .follow-users {display: flex;flex-flow: row wrap;}
 .feed_post .dialog-topic-select .topic-list > li {display: inline-block;width: 50%;cursor: pointer;}
-.feed_post .dialog-mention-select .topic-list > li {display: inline-block;width: 50%;cursor: pointer;}
+.feed_post .dialog-mention-select .follow-users > li {display: inline-block;width: 50%;cursor: pointer;}
 .feed_post .post_button {line-height:32px;float:right;width:85px;height:32px;text-align:center;color:#fff;border:0;border-radius:3px;background:#59b6d7;/* margin-right:40px;.del_huifu */}
 .feed_post .feed_select {float:right;margin-right:10px;font-size:14px;color:#666;}
 .feed_post .feed_select i {margin-top:10px;}
