--- a/packages/zhiyicx-plus-pc/resources/assets/web/css/group.css
+++ b/packages/zhiyicx-plus-pc/resources/assets/web/css/group.css
@@ -191,9 +191,9 @@
 .amap_lib_placeSearch .poibox.highlight {background-color:#CAE1FF;}
 .amap_lib_placeSearch .poi-more {display:none!important;}
 /*定义滚动条高宽及背景 高宽分别对应横竖滚动条的尺寸*/
-::-webkit-scrollbar {width:2px;height:2px;background-color:#F5F5F5;}
+/*::-webkit-scrollbar {width:2px;height:2px;background-color:#F5F5F5;}*/
 /*定义滚动条轨道 内阴影+圆角*/
-::-webkit-scrollbar-track {-webkit-box-shadow:inset 0 0 6px rgba(0,0,0,0.3);border-radius:10px;background-color:#F5F5F5;}
+/*::-webkit-scrollbar-track {-webkit-box-shadow:inset 0 0 6px rgba(0,0,0,0.3);border-radius:10px;background-color:#F5F5F5;}*/
 /*定义滑块 内阴影+圆角*/
-::-webkit-scrollbar-thumb {border-radius:10px;-webkit-box-shadow:inset 0 0 6px rgba(0,0,0,.3);background-color:#555;}
+/*::-webkit-scrollbar-thumb {border-radius:10px;-webkit-box-shadow:inset 0 0 6px rgba(0,0,0,.3);background-color:#555;}*/
 .zy_select.open >ul{max-height: 288px;overflow-y: scroll;}
