--- a/packages/zhiyicx-plus-pc/resources/assets/web/css/common.css
+++ b/packages/zhiyicx-plus-pc/resources/assets/web/css/common.css
@@ -156,7 +156,7 @@ a {font-size:100%;vertical-align:baseline;background:transparent;text-decoration
 /*近期热点*/.hot_news {width:100%;margin-bottom:30px;padding:0 15px 0;border:1px solid #ededed;background-color:#fff;}
 .hot_news .title {font-size:18px;padding:20px 0 15px;text-align:center;color:#333;border-bottom:1px solid #ededed;}
 .hot_news .time_menu {display:inline-block;width:203px;margin:0;padding-top:16px;border-bottom:1px solid #ededed;background-color:#fff;}
-.hot_news .time_menu li {float:left;width:33.3%;width:33.3%;cursor:pointer;text-align:center;}
+.hot_news .time_menu li {float:left;width:33.3%;cursor:pointer;text-align:center;}
 .hot_news .time_menu li a {display:inline-block;height:40px;padding:0 10px;color:#999;}
 .hot_news .time_menu li a.hover {color:#333;border-bottom:2px solid #59b6d7;}
 .hot_news_list li {font-size:14px;overflow:hidden;padding:15px 0;border-bottom:1px solid #ededed;}
@@ -305,11 +305,21 @@ to {-webkit-transform:rotate(360deg);transform:rotate(360deg);}
 .comment_post .post_button {line-height:32px;float:right;width:85px;height:32px;text-align:center;color:#fff;border:0;cursor:pointer;border-radius:3px;background:#59b6d7;}
 .comment_post_nums {font-size:12px;margin-left:385px;}
 .comment_box .comment_con {word-break:break-all;margin-bottom:16px;}
-.comment_box .comment_con a.mouse {cursor:pointer;display:none;margin-left:5px;color:#59b6d7;}
+.comment_box .comment_con a {color: #59b6d7;}
+.comment_box .comment_con a.mouse {cursor:pointer;display:none;margin-left:5px;}
 /*详情评论*/.comment_title {margin-top:40px;margin-bottom:20px;}
 .comment_count {font-size:22px;color:#59b6d7;}
 .comment_box .comment_editor {font-size:14px;width:100%;height:77px;margin-bottom:10px;padding:10px;resize:none;color:#666;border:1px solid #ededed;outline:none;background:#f3f6f7;}
 .comment_box .comment_tool {text-align:right;}
+.comment_box .mention-btn {position: relative;display: inline-block;cursor: pointer;}
+.comment_box .mention-btn .dialog-mention-select {position: absolute;display: flex;left: 0;top: 100%;width: 400px;height: 220px;z-index: 10;padding: 20px 40px;background-color: #fff;box-shadow: 0px 2px 9px 0px
+    rgba(22, 23, 23, 0.09);flex-direction: column;cursor: default;}
+.comment_box .dialog-mention-select .search-wrap {border-bottom: 1px solid #ccc;}
+.comment_box .dialog-mention-select .search-wrap input {border: none;}
+.comment_box .dialog-mention-select .hot {color: #ccc;margin-top: 20px;cursor: default;}
+.comment_box .dialog-mention-select .follow-users {display: flex;flex-flow: row wrap;}
+.comment_box .dialog-mention-select .follow-users > li {display: inline-block;width: 50%;cursor: pointer;}
+
 .comment_tool .text_stats {margin-right:20px;font-size:14px;color:#777;}
 .comment_list .comment_item {border-bottom:1px solid #ededed;margin-top:40px;padding-bottom:10px;}
 .comment_list .comment_item dt {float:left;position:relative;}
