fix(pc): 转发入口修正

--- a/packages/zhiyicx-plus-pc/resources/assets/web/css/common.css
+++ b/packages/zhiyicx-plus-pc/resources/assets/web/css/common.css
@@ -462,7 +462,8 @@ to {-webkit-transform:rotate(360deg);transform:rotate(360deg);}
 /* 转发弹框 */
 .repostable-wrap {padding: 20px;}
 .repostable-wrap blockquote {margin: 0;background-color: #f7f7f7;padding: 10px;font-size: 14px;line-height: 24px;color: #b3b3b3;}
-.repostable-wrap blockquote h3 {color: #333;margin: 0;font-weight: normal;font-size: 100%;}
+.repostable-wrap blockquote h3,
+.repostable-wrap blockquote p strong {color: #333;margin: 0;font-weight: normal;font-size: 100%;}
 .repostable-wrap blockquote p {margin: 0;}
 .repostable-wrap .content {margin-top: 20px;border: 1px solid #ededed;background-color: #f3f6f7;padding: 10px;font-size: 14px;height: 100px;overflow: auto;}
 .repostable-wrap .content[contenteditable=true]:empty::before {content: attr(placeholder);display: block;color: #b3b3b3;}/* placeholder */
