--- a/packages/zhiyicx-plus-pc/resources/assets/web/css/common.css
+++ b/packages/zhiyicx-plus-pc/resources/assets/web/css/common.css
@@ -313,13 +313,13 @@ to {-webkit-transform:rotate(360deg);transform:rotate(360deg);}
 .comment_box .comment_editor {font-size:14px;width:100%;height:77px;margin-bottom:10px;padding:10px;resize:none;color:#666;border:1px solid #ededed;outline:none;background:#f3f6f7;}
 .comment_box .comment_tool {text-align:right;}
 .comment_box .mention-btn {position: relative;display: inline-block;cursor: pointer;}
-.comment_box .dialog-mention-select {position: absolute;display: flex;left: 0;top: 100%;width: 400px;height: 220px;z-index: 10;padding: 20px 40px;background-color: #fff;box-shadow: 0px 2px 9px 0px
+.dialog-mention-select {position: absolute;display: flex;left: 0;top: 100%;width: 400px;height: 220px;z-index: 10;padding: 20px 40px;background-color: #fff;box-shadow: 0px 2px 9px 0px
     rgba(22, 23, 23, 0.09);flex-direction: column;cursor: default;}
-.comment_box .dialog-mention-select .search-wrap {border-bottom: 1px solid #ccc;}
-.comment_box .dialog-mention-select .search-wrap input {border: none;}
-.comment_box .dialog-mention-select .hot {color: #ccc;margin-top: 20px;cursor: default;}
-.comment_box .dialog-mention-select .follow-users {display: flex;flex-flow: row wrap;}
-.comment_box .dialog-mention-select .follow-users > li {display: inline-block;width: 50%;cursor: pointer;}
+.dialog-mention-select .search-wrap {border-bottom: 1px solid #ccc;}
+.dialog-mention-select .search-wrap input {border: none;}
+.dialog-mention-select .hot {color: #ccc;margin-top: 20px;cursor: default;}
+.dialog-mention-select .follow-users {display: flex;flex-flow: row wrap;}
+.dialog-mention-select .follow-users > li {display: inline-block;width: 50%;cursor: pointer;}
 .comment_buttons {float: left;}
 .comment_tool {float:right;}
 .comment_tool .text_stats {margin-right:20px;font-size:14px;color:#777;}
@@ -471,3 +471,5 @@ to {-webkit-transform:rotate(360deg);transform:rotate(360deg);}
 .repostable-wrap .tools > span {margin-right: 20px;font-size: 14px;float: left;display: block;height: 36px;line-height: 36px;}
 .repostable-wrap .tools > button {float: right;background-color: #59b6d7;color: #fff;border: none;border-radius: 2px;width: 85px;height: 36px;}
 .repostable-wrap .icon {fill: #999;}
+.repostable-topic {cursor: pointer;}
+.repostable-mention {cursor: pointer;}
