--- a/packages/zhiyicx-plus-pc/resources/assets/web/css/common.css
+++ b/packages/zhiyicx-plus-pc/resources/assets/web/css/common.css
@@ -477,4 +477,10 @@ to {-webkit-transform:rotate(360deg);transform:rotate(360deg);}
 .feed_repostable strong {font-weight: bold;}
 .feed_repostable .title {font-weight: bold;margin: 0;}
 .feed_repostable .description {margin: 0;}
+.feed_repostable.news {display: flex;}
+.feed_repostable .news-left {width: 160px;height: 114px;flex: none;margin-right: 15px;}
+.feed_repostable .news-right {flex: auto;display: flex;flex-direction: column;justify-content: space-between;letter-spacing: 0;}
+.feed_repostable .news-right .title {font-size: 16px;}
+.feed_repostable .news-right .category {border: 1px solid #59b6d7;border-radius: 3px;color: #59b6d7;font-size: 12px;padding: 1px 2px;margin-right: 10px;}
+.feed_repostable .news-right .information {color: #999;font-size: 12px;}
 .layui-layer-page .layui-layer-content {overflow: visible !important;} /*转发弹框话题选择溢出部分可见*/
