--- a/packages/zhiyicx-plus-pc/resources/assets/web/css/group.css
+++ b/packages/zhiyicx-plus-pc/resources/assets/web/css/group.css
@@ -41,7 +41,7 @@
 .feed_content .post-title a {color:#59b6d7;}
 .feed_content .unjoined-cover {position: absolute;top: 0;left:0;right:0;bottom:0;z-index: 100;cursor: pointer;}
 .feed_content .feed_item .feed_title .pinned {background-color: #67b595;border-radius: 2px;padding: 0 2px;color: #fff;font-size: 12px;}
-
+.feed_content .feed_item .feed_title .excellent {float: right;background-color: #f76c69;border-radius: 2px;padding: 0 2px;font-size: 12px;color: #fff;margin: 19px 10px 0 0;}
 
 /* 圈子动态详情 */
 .feed_left .post-title {font-size:30px;color:#333;line-height:30px;height:60px;cursor:pointer;}
