--- a/packages/zhiyicx-plus-pc/resources/assets/web/css/feed.css
+++ b/packages/zhiyicx-plus-pc/resources/assets/web/css/feed.css
@@ -11,18 +11,7 @@
 .feed_post .topic-btn,
 .feed_post .mention-btn {position: relative;}
 .feed_post .topic-btn  .dialog-topic-select,
-.feed_post .mention-btn .dialog-mention-select {position: absolute;display: flex;left: 0;top: 100%;width: 400px;height: 300px;z-index: 10;padding: 20px 40px;background-color: #fff;box-shadow: 0px 2px 9px 0px
-    rgba(22, 23, 23, 0.09);flex-direction: column;cursor: default;}
-.dialog-topic-select .search-wrap,
-.dialog-mention-select .search-wrap {border-bottom: 1px solid #ccc;}
-.dialog-topic-select .search-wrap input,
-.dialog-mention-select .search-wrap input {border: none;}
-.dialog-topic-select .hot,
-.dialog-mention-select .hot {color: #ccc;margin-top: 20px;cursor: default;}
-.dialog-topic-select .topic-list,
-.dialog-mention-select .follow-users {display: flex;flex-flow: row wrap;}
-.dialog-topic-select .topic-list > li {display: inline-block;width: 50%;cursor: pointer;}
-.dialog-mention-select .follow-users > li {display: inline-block;width: 50%;cursor: pointer;}
+.feed_post .mention-btn .dialog-mention-select {position: absolute;display: flex;left: 0;top: 100%;width: 400px;height: 300px;z-index: 10;padding: 20px 40px;background-color: #fff;box-shadow: 0px 2px 9px 0px rgba(22, 23, 23, 0.09);flex-direction: column;cursor: default;}
 .feed_post .post_button {line-height:32px;float:right;width:85px;height:32px;text-align:center;color:#fff;border:0;border-radius:3px;background:#59b6d7;/* margin-right:40px;.del_huifu */}
 .feed_post .feed_select {float:right;margin-right:10px;font-size:14px;color:#666;}
 .feed_post .feed_select i {margin-top:10px;}
@@ -30,13 +19,6 @@
 .feed_post .feed_select ul li {margin-bottom:10px;}
 .feed_post .feed_picture {display:none;overflow:hidden;height:60px;margin-top:20px;}
 .feed_post .feed_picture_span {position:relative;display:inline-block;float:left;width:59px;height:59px;margin-right:3px;border:1px solid #ededed;}
-.feed_post .selected-topics .selected-topic-item {padding: 0 6px;}
-
-/* 小标签 */
-.selected-topics {display: flex;flex-flow: row wrap;margin-top: 10px;}
-.selected-topics .selected-topic-item {background-color: rgba(89, 182, 215, 0.15);padding: 0 6px;border-radius: 3px;color: #59b6d7;font-size: 12px;margin-right: 6px;margin-bottom: 6px;height: 24px;line-height: 24px;}
-.selected-topics .selected-topic-item .close {height: 24px;line-height: 24px;cursor: pointer;}
-.selected-topics .selected-topic-item svg {transform: scale(0.7);}
 
 .uploadify-queue-add {background-image:url(../images/picture-add.png);background-repeat:no-repeat;background-size:cover;}
 .feed_picture_span .imgload {position:absolute;top:18px;left:18px;transform:translateY(-50%) translateX(-50%);-webkit-animation:icon-load 1.5s infinite linear;animation:icon-load 1.5s infinite linear;}
