--- a/packages/zhiyicx-plus-pc/resources/assets/web/css/common.css
+++ b/packages/zhiyicx-plus-pc/resources/assets/web/css/common.css
@@ -315,7 +315,7 @@ to {-webkit-transform:rotate(360deg);transform:rotate(360deg);}
 .comment_box .mention-btn {position: relative;display: inline-block;cursor: pointer;}
 .dialog-mention-select {position: absolute;display: flex;left: 0;top: 100%;width: 400px;height: 249px;z-index: 10;padding: 20px 40px;background-color: #fff;box-shadow: 0px 2px 9px 0px rgba(22, 23, 23, 0.09);flex-direction: column;cursor: default;}
 .dialog-mention-select .search-wrap {border-bottom: 1px solid #ccc;}
-.dialog-mention-select .search-wrap input {border: none;}
+.dialog-mention-select .search-wrap input {border: none;line-height: 37px;}
 .dialog-mention-select .hot {color: #ccc;margin-top: 20px;cursor: default;}
 .dialog-mention-select .follow-users {display: flex;flex-flow: row wrap;}
 .dialog-mention-select .follow-users > li {display: inline-block;width: 50%;cursor: pointer;}
@@ -328,8 +328,8 @@ to {-webkit-transform:rotate(360deg);transform:rotate(360deg);}
 .dialog-mention-select .hot {color: #ccc !important;margin-top: 20px;cursor: default !important;}
 .dialog-topic-select .topic-list,
 .dialog-mention-select .follow-users {display: flex;flex-flow: row wrap;}
-.dialog-topic-select .topic-list > li {display: inline-block;width: 50%;cursor: pointer;}
-.dialog-mention-select .follow-users > li {display: inline-block;width: 50%;cursor: pointer;}
+.dialog-topic-select .topic-list > li,
+.dialog-mention-select .follow-users > li {display: inline-block;width: 50%;cursor: pointer;line-height: 37px;}
 
 /* 小标签 */
 .selected-topics {display: flex;flex-flow: row wrap;margin-top: 10px;}
