--- a/packages/zhiyicx-plus-pc/resources/assets/web/css/message.css
+++ b/packages/zhiyicx-plus-pc/resources/assets/web/css/message.css
@@ -32,7 +32,7 @@
 .chat_right .body_title svg {float:right;margin-top:13px;margin-right:20px;}
 .chat_right .audit_top {width:100%;font-size:16px;height:50px;padding-left:20px;text-align:left;border-bottom:1px solid #DEDEDE;line-height:50px;}
 /*消息相关*/.chat_right .chat_content_wrap {width:510px;height:calc(100% - 50px);overflow:hidden;}
-.chat_right .chat_content {padding:0 15px;width:525px;height:100%;overflow-y:auto;overflow-x:hidden;}
+.chat_right .chat_content {padding:0 15px;height:100%;overflow-y:auto;overflow-x:hidden;}
 .chat_right .message_cont {}
 .message_cont .message_one {border-bottom:1px solid #DEDEDE;min-height:100px;margin-bottom:0px}
 .message_cont .message_one>dt {width:55px;padding:0;margin:0;height:80px;position:relative;}
@@ -127,8 +127,8 @@
 .chat_ad_selected_users .chat_ad_selected_op{width:315px; padding: 40px 0px 0px 0px !important;text-align: left;margin-top: 0px;float: left;clear: both;text-align: center;}
 .chat_mention_card {width: 100%;padding: 20px 0;display: flex;flex-direction: row;border-bottom: 1px solid #ededed;}
 .chat_mention_card img {width: 40px;height: 40px;margin-right: 20px;flex:none;}
-.chat_mention_card .mention_info {display: flex;flex-direction: column;}
-.chat_mention_card .content {font-size: 16px;}
+.chat_mention_card .mention_info {display: flex;flex-direction: column;flex: auto;}
+.chat_mention_card .content {font-size: 14px;background-color: #f5f5f5;padding: 10px;color: #666;margin-top: 10px;}
 .chat_mention_card .content a {color: #59b6d7;}
 .chat_mention_card .name {font-size: 14px;}
 .chat_mention_card .time {font-size: 14px;color: #ccc;margin: 10px 0;}
