--- a/packages/zhiyicx-plus-pc/resources/assets/web/css/common.css
+++ b/packages/zhiyicx-plus-pc/resources/assets/web/css/common.css
@@ -493,13 +493,14 @@ to {-webkit-transform:rotate(360deg);transform:rotate(360deg);}
 .repostable-topic {cursor: pointer;}
 .repostable-mention {cursor: pointer;}
 .feed_repostable {display: block;padding: 20px;margin-bottom: 20px;background-color: #f7f7f7;font-size: 14px;color: #666;letter-spacing: 1px;cursor: pointer;word-wrap: break-word;word-break: break-all;}
+.feed_repostable .post_cover {margin-top: 10px;}
 .feed_repostable strong {font-weight: bold;}
 .feed_repostable .title {font-weight: bold;margin: 0;}
 .feed_repostable .description {margin: 0;}
 .feed_repostable.news {display: flex;}
 .feed_repostable .news-left {width: 160px;height: 114px;flex: none;margin-right: 15px;}
 .feed_repostable .news-left .cover {width: 100%;height: 100%;background: no-repeat center / cover;}
-.feed_repostable .news-right {flex: auto;display: flex;flex-direction: column;justify-content: space-around;letter-spacing: 0;}
+.feed_repostable .news-right {flex: auto;display: flex;flex-direction: column;justify-content: space-between;letter-spacing: 0;}
 .feed_repostable .news-right .title {font-size: 16px;}
 .feed_repostable .news-right .category {border: 1px solid #59b6d7;border-radius: 3px;color: #59b6d7;font-size: 12px;padding: 1px 2px;margin-right: 10px;}
 .feed_repostable .news-right .information {color: #999;font-size: 12px;}
