--- a/packages/zhiyicx-plus-pc/resources/assets/web/css/topic.css
+++ b/packages/zhiyicx-plus-pc/resources/assets/web/css/topic.css
@@ -26,7 +26,7 @@
 .p-topic-detail .left > header .mask h1 {font-size: 40px;letter-spacing: 1px;margin-bottom: 30px;}
 .p-topic-detail .left > header .mask .author {font-size: 18px;margin-bottom: 24px;margin-top: 0;}
 .p-topic-detail .left > header .mask .description {font-size: 14px;line-height: 24px;margin-top: 0;text-align: center;}
-.p-topic-detail .left > header .report {position: absolute;bottom: 30px;right: 40px;opacity: 0.4;background-color: #000;border-radius: 20px;color:#fff;font-size: 14px;z-index: 2;padding: 2px 12px;}
+.p-topic-detail .left > header .report {position: absolute;bottom: 30px;right: 40px;opacity: 0.4;background-color: #000;border-radius: 20px;color:#fff;font-size: 14px;z-index: 2;padding: 2px 12px;border: 1px solid #fff;}
 .p-topic-detail .left .feed-list {background-color: #fff;padding: 40px;}
 .p-topic-detail .left .feed-list .feed_item:first-child .feed_title {margin-top: 0;}
 .p-topic-detail .left .feed-list .feed_item:last-child .feed_line {display: none;}
