--- a/packages/zhiyicx-plus-pc/resources/assets/web/css/group.css
+++ b/packages/zhiyicx-plus-pc/resources/assets/web/css/group.css
@@ -85,7 +85,9 @@
 .m-search-area .area-searching a{display: inline-block;width: 100%;height: 35px;line-height: 35px;float: left;cursor: pointer;text-indent: 10px;}
 .m-search-area .search-icon{position:absolute;left:201px;top:5px;cursor:pointer;}
 
+.p-idxgroup {position: relative;overflow: hidden;}
 .p-idxgroup .m-chip{margin-top: 15px;}
+
 .p-addgroup .g-mn{width:880px;margin:0 auto;padding:40px;background-color:white;}
 .p-addgroup .u-tt{margin:0;padding-bottom:20px ;font-weight:normal;border-bottom:1px solid #EDEDED;}
 .p-addgroup .m-form .formitm{margin-bottom:30px;font-size:14px;position:relative;}
